--- a/style.css
+++ b/style.css
@@ -9,12 +9,18 @@
     background-color: rgba(255, 0, 0, 0.4);
 }
 
+
 /* HEADER */
+
 .header-container{
     width: 100%;
     height: 100px;
     padding: 10px 20px 0 20px;
     border-bottom: 1px solid #CBCBCB;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
 }
 
 .google-logo{
@@ -67,8 +73,10 @@ footer nav ul{
 /* /HEADER */
 
 /* MAIN */
+
 .text-container{
     width: 40%;
+    padding-top: 100px;
     margin: 100px auto;
 }
 .paragraph-title{
